--- a/src/main/res/layout-v14/activity_new_post.xml
+++ b/src/main/res/layout-v14/activity_new_post.xml
@@ -14,9 +14,10 @@
         android:id="@+id/description"
         android:layout_height="wrap_content"
         android:hint="Description"
-        android:layout_below="@+id/needs"
+        android:singleLine="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/needs" />
 
     <EditText
         android:hint="Name"
@@ -26,7 +27,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:singleLine="true"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -37,7 +39,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:singleLine="true"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -48,8 +51,8 @@
         android:textColor="@android:color/white"
         android:onClick="Submit"
         android:layout_below="@+id/description"
-        android:layout_alignRight="@+id/description"
-        android:layout_alignEnd="@+id/description"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -58,14 +61,14 @@
         android:layout_height="wrap_content"
         android:text="Cancel"
         android:id="@+id/cancel"
-        android:layout_below="@+id/button3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:onClick="cancel"
         android:background="@android:color/holo_red_dark"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white"
+        android:layout_below="@+id/button3"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
