--- a/src/main/res/layout-v14/activity_new_post.xml
+++ b/src/main/res/layout-v14/activity_new_post.xml
@@ -24,11 +24,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/name"
+        android:singleLine="true"
+        android:layout_below="@+id/photo"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:singleLine="true"/>
+        android:layout_alignRight="@+id/needs"
+        android:layout_alignEnd="@+id/needs" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -69,6 +70,15 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Upload Photo"
+        android:id="@+id/photo"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="takePhoto"/>
 
 
 </RelativeLayout>
