--- a/src/main/res/layout/activity_post.xml
+++ b/src/main/res/layout/activity_post.xml
@@ -26,6 +26,7 @@
             android:src = "@drawable/profile"/>
 
         <Button
+            android:onClick="help"
             android:text="Help"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
